# TOT

./: .bazelrc  .gitmodules  LICENSE  WORKSPACE
cpp/: BUILD.bazel  atomic.hpp  error.hpp  io.hpp  os.hpp  sync.hpp  syscall.hpp  test_app.cc
cpp/base/: BUILD.bazel  error.cc  error.h  unique_fd.cc  unique_fd.h
cpp/io/: BUILD.bazel  io.h
cpp/os/: BUILD.bazel  file.h  unix_file.cc
cpp/os/exec/: BUILD.bazel  exec.h  exec_app.cc  exec_unix.cc
cpp/src/atomic/: atomic.cpp
cpp/src/error/: error.cpp
cpp/src/io/: io.cpp
cpp/src/os/: constants.cpp  errors.cpp  file.cpp  stat.cpp  unix_utils.cpp  utils.cpp  utils.hpp
cpp/src/sync/: mutex.cpp  once.cpp
cpp/src/syscall/: constants.cpp  errno.cpp  errno_internal.cpp  errno_internal.hpp  open.cpp  pipe2.cpp  stat.cpp  timespec.cpp
