package(default_visibility = ["//visibility:public"])

cc_library(
	name = "exec",
	hdrs = ["exec.h"],
	srcs = ["exec_unix.cc"],
	deps = [
		"//cpp/base:error",
		"//cpp/io",
		"//cpp/os:file",
		"@com_google_absl//absl/types:optional",
		"@com_google_absl//absl/types:span",
	],
)

cc_binary(
	name = "exec_app",
	srcs = ["exec_app.cc"],
	deps = [":exec"],
)
